...

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header"/>

    <EditText
            android:id="@+id/input_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textMultiLine"/>

    <TextView
            android:id="@+id/double_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat_answer"
            android:visibility="gone"/>

    <EditText
            android:id="@+id/double_entry_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:visibility="gone"/>

</merge>
...
